# Gazibo

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json  tsconfig.json
app/src/: client.ts
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/account/: page.tsx
frontend/src/app/account/settings/: page.tsx
frontend/src/app/account/settings/delete/: page.tsx
frontend/src/app/connect/: page.tsx
frontend/src/app/freelancer/[address]/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/app/jobs/[id]/: page.tsx
frontend/src/app/protocol/dispute-resolution/: page.tsx
frontend/src/components/: GaziboApp.tsx  Layout.tsx  Page.tsx  WalletProvider.tsx
frontend/src/components/info/: InfoPageLayout.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/idl/: gazibo.json
frontend/src/lib/: theme.ts
programs/gazibo/: Cargo.toml
programs/gazibo/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs
programs/gazibo/src/instructions/: accept_job.rs  cancel_job.rs  create_job.rs  deliver_job.rs  initialize_client.rs  release_payment.rs
programs/gazibo/tests/: test_initialize.rs
