[package]
name = "gazibo"
version = "0.1.0"
description = "Gazibo - Freelance escrow platform on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gazibo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
litesvm = "0.13.1"
solana-sdk = "^3"
borsh = "0.10"